Added mt4-nsis-installer. Added readme and license.

--- a/js-reddit-post-monitor/index.html
+++ b/js-reddit-post-monitor/index.html
@@ -60,7 +60,7 @@ body
 'use strict';
 
 var config = {
-	refreshInterval: 60 * 5 * 0 + 5, //seconds
+	refreshInterval: 60 * 5, //seconds
 	firstSeenPostsCount: 3,
 
 	urlList: [
@@ -72,14 +72,6 @@ var config = {
 			name: "It's funny!",
 		},
 
-		{
-			url: '/r/forhire/new/.json',
-			name: 'For hire',
-		},
-		{
-			url: '/r/Jobs4Bitcoins/new/.json',
-			name: 'Jobs4Bitcoins',
-		},
 	],
 };
 
